--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@outdoorsyco/crowdin-api",
-  "version": "2.1.0",
+  "version": "2.1.1",
   "description": "API client for Crowdin",
   "repository": {
     "type": "git",
@@ -35,5 +35,8 @@
   },
   "files": [
     "index.js"
-  ]
+  ],
+  "engines": {
+    "node": "^4.5 || 6.* || >= 7.*"
+  }
 }
